User can get pet-types moderator and admin can create, patch and delete pet-types
extra:
- updated NotAuthorizedEntryPoint to return a json body
- Created SecurityPaths class to store url patterns that are accessible based on roles and others.